--- a/src/styles/IPinfo.css
+++ b/src/styles/IPinfo.css
@@ -76,6 +76,10 @@
     }
     .label {
       margin-top: 0.5em;
+      font-size: 1.1em;
+    }
+    .value {
+      font-size: 0.85em;
     }
   }
 
