--- a/src/styles/HomeView.css
+++ b/src/styles/HomeView.css
@@ -1,27 +1,23 @@
 .main {
   font-size: 100%;
   font-family: 'Comfortaa';
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   margin: -0.5em;
 }
 
 .topbar {
-  background-image: url("../assets/green-bg.png");
+  background-image: url("../assets/topography.svg");
   background-repeat: no-repeat;
   background-size: cover;
   inset: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
   box-sizing: border-box;
+  background-color: #7692a3;
 }
 
 .searchContainer {
   display: flex;
   justify-content: center;
-  align-items: center;
   box-sizing: border-box;
   flex-wrap: wrap;
 }
@@ -32,12 +28,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: whitesmoke;
+  color: #30373d;
 }
 
 .userIP {
   width: 100%;
-  color: whitesmoke;
+  color: #30373d;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -74,17 +70,23 @@ i {
   position: relative;
 }
 
+.bottomContainer {
+  background-image: url("../assets/topography.svg");
+  background-size: cover;
+  background-color: #7692a3;
+}
+
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .topbar {
-    height: 27vh;
+    height: 30vh;
     padding-bottom: 4em;
   }
   .header {
-    font-size: 2em;
+    font-size: 1.8em;
     margin-top: 1em;
   }
   .searchContainer {
-    width: 19em;
+    width: 21em;
     height: 8em;
   }
   .inputContainer {
@@ -96,10 +98,18 @@ i {
     margin-top: 1rem;
   }
   #map {
-    height: 73vh;
+    height: 70vh;
   }
   i {
     top: 0.7em;
+  }
+  .bottomContainer {
+    margin-top: -4vh;
+    padding: 1em 0em;
+  }
+  .infoBox {
+    margin-right: 6vw;
+    margin-top: 4vh;
   }
 }
 
@@ -163,7 +173,7 @@ i {
 
 @media screen and (min-width: 1025px) and (max-width: 1919px) {
   .topbar {
-    height: 28vh;
+    height: 32vh;
     padding-bottom: 3em;
   }
   .header {
@@ -183,7 +193,7 @@ i {
     font-size: 1em;
   }
   #map {
-    height: 72vh;
+    height: 68vh;
   }
   i {
     top: 0.7em;
