--- a/src/styles/IPinfo.css
+++ b/src/styles/IPinfo.css
@@ -4,6 +4,9 @@
   border-radius: 0.5em;
   display: flex;
   justify-content: space-around;
+  -webkit-box-shadow: 10px 10px 5px -2px rgba(51, 51, 51, 1);
+  -moz-box-shadow: 10px 10px 5px -2px rgba(51, 51, 51, 1);
+  box-shadow: 10px 10px 5px -2px rgba(51, 51, 51, 1);
 }
 
 .label {
@@ -24,10 +27,10 @@
       }
       .label {
         margin-top: 0.5em;
-        font-size: 0.9em;
+        font-size: 0.7em;
       }
       .value {
-        font-size: 0.8em;
+        font-size: 0.5em;
       }
 }
 
@@ -65,6 +68,10 @@
   }
   .label {
     margin-top: 0.5em;
+    font-size: 1.1em;
+  }
+  .value {
+    font-size: 0.85em;
   }
 }
 
@@ -91,9 +98,9 @@
   }
   .label {
     margin-top: 0.8em;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
   .value {
-    font-size: 1.5rem;
+    font-size: 1.1rem;
   }
 }
