--- a/src/styles/InfoBox.css
+++ b/src/styles/InfoBox.css
@@ -1,12 +1,10 @@
 .container {
   width: 80%;
   font-size: 100%;
-  /* background-color: whitesmoke; */
   border-radius: 0.5em;
   display: flex;
   flex-direction: column;
   padding: 1em 0.5em;
-  margin-left: 6vh;
   align-items: center;
   text-align: center;
   background-image: url("../assets/noise.png");
@@ -20,6 +18,35 @@
   margin-bottom: 1em;
 }
 
-/* .caption {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .container {
+    width: 70%;
+  }
+  .title {
+    font-size: 0.7em;
+  }
+  .caption {
+    font-size: 0.6em;
+  }
+}
 
-} */
+@media screen and (min-width: 1025px) and (max-width: 1919px) {
+  .container {
+    margin: 2vw;
+  }
+  .caption {
+    font-size: 0.8em;
+  }
+}
+
+@media screen and (min-width: 2560px) {
+  .container {
+    margin: 6vh;
+  }
+  .title {
+    font-size: 1.5em;
+  }
+  .caption {
+    font-size: 1.3em;
+  }
+}
